// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HorizontalCard1 should render is-read correctly 1`] = `
<div>
  <article
    class="undefined undefined xs__p+4"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0"
      >
        <picture>
          <img
            alt="This is the title"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption />
      </figure>
      <div
        class="undefined xs__pl+4 s__p+4"
      >
        <div
          class="undefined xs__m-0 xs__mb+2 body-text sans xs"
        >
          <time>
            11:40
          </time>
          <span>
            •
          </span>
          <span>
            Ondernemen
          </span>
        </div>
        <div>
          <h1
            class="heading serif s xs__m-0"
          >
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`HorizontalCard1 should render variant-1 correctly 1`] = `
<div>
  <article
    class="undefined xs__p+4"
    id="1"
  >
    <a
      aria-label="This is the title"
      href="https://example.com/1/This is the title"
    >
      <figure
        class="xs__m-0"
      >
        <picture>
          <img
            alt="This is the title"
            src="https://images.example.com/image.png"
          />
        </picture>
        <figcaption />
      </figure>
      <div
        class="undefined xs__pl+4 s__p+4"
      >
        <div
          class="undefined xs__m-0 xs__mb+2 body-text sans xs"
        >
          <time>
            11:40
          </time>
          <span>
            •
          </span>
          <span>
            Ondernemen
          </span>
        </div>
        <div>
          <h1
            class="heading serif s xs__m-0"
          >
            This is the title
          </h1>
        </div>
      </div>
    </a>
  </article>
</div>
`;
